--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Search</title>
     </head>
     <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <!-- <input type="hidden" value="isch" name="tbm"> -->
-            <input type="submit" value="Search">
-        </form>
+        <div class="container">
+            <div class="search-div">
+                <p>
+                    Busca alguna imagen sapo qlo aaaaaaaaaaaaaaaaaaaaaaaaaa
+                </p>
+
+                <form action="https://google.com/search">
+                    <input type="text" name="q">
+                    <input type="hidden" value="isch" name="tbm">
+                    <input type="submit" value="Search">
+                </form>
+            </div>
+        </div>
     </body>
 </html>
